--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   charts_painter: ^3.1.1
   liquid_pull_to_refresh: ^3.0.1
   fl_chart: ^0.65.0
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
