--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.1
   fl_chart: ^0.65.0
   http: ^1.1.2
+  percent_indicator: ^3.0.0
+  gauge_indicator: ^0.4.3
 
 dev_dependencies:
   flutter_test:
