--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -42,6 +41,8 @@ dependencies:
   percent_indicator: ^3.0.0
   gauge_indicator: ^0.4.3
   flutter_barcode_scanner: ^2.0.0
+  image_picker: ^1.0.5
+  
 
 dev_dependencies:
   flutter_test:
