--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   gauge_indicator: ^0.4.3
   flutter_barcode_scanner: ^2.0.0
   image_picker: ^1.0.5
+  tflite: ^1.1.2
+  awesome_dialog: ^3.1.0
 
 
 dev_dependencies:
@@ -69,7 +71,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-   # - assets/4.jpg
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
