--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.0.5
   tflite: ^1.1.2
   awesome_dialog: ^3.1.0
+  dio: ^5.4.3+1
 
 
 dev_dependencies:
@@ -71,6 +72,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/about us/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
