--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   gauge_indicator: ^0.4.3
   flutter_barcode_scanner: ^2.0.0
   image_picker: ^1.0.5
-  tflite: ^1.1.2
+  tflite: any
   awesome_dialog: ^3.1.0
   dio: ^5.4.3+1
 
